GIF: fix gap between gif and options

--- a/packages/thicket-webapp/src/components/Gif/Gif.css
+++ b/packages/thicket-webapp/src/components/Gif/Gif.css
@@ -106,7 +106,7 @@
     margin: 0 auto;
     display: inline-grid;
     grid-template-columns: auto auto;
-    grid-column-gap: 0.5em;
+    grid-column-gap: 1em;
     justify-content: center;
     text-align: initial;
   }
